style: getOpenCard 메서드 get(0) -> getFrist() 수정